# RemoteMapper

./: .gitmodules  CMakeLists.txt  README.md  resources.qrc
asserts/config/: OBC.conf  links.json  remotes.json  streams.json
asserts/config/component/: pscamera.settings.json  sony265.settings.json  upa640.settings.json
cmake/components/: obc-base.cmake  obc-plugin.cmake  obc-ui-widget.cmake
examples/: README.md
src/: main.cpp
src/base/: OBCBaseApplication.cpp  OBCBaseApplication.hpp  OBCBaseHeader.hpp
src/base/interface/: ControlInterface.hpp  DeviceInterface.hpp  DisplayInterface.hpp  StreamInterface.hpp
src/base/models/: OBCIdentifier.hpp  OBCSafeType.hpp  OBCSettingsObject.hpp
src/core/handler/: BundleHandler.cpp  BundleHandler.hpp  BundleItem.hpp  ConfigHandler.cpp  ConfigHandler.hpp  LinkHandler.cpp  LinkHandler.hpp
src/core/link/: LinkInterface.hpp  SerialLink.cpp  SerialLink.hpp  SerialThread.cpp  SerialThread.hpp
src/core/settings/: SettingsBackend.cpp  SettingsBackend.hpp
src/core/stream/data/: SerialDataStream.cpp  SerialDataStream.hpp
src/plugin/: GUIPluginInterface.hpp  ObPluginInterface.cmake  PluginBase.hpp  PluginInterface.cpp  PluginInterface.hpp  PluginProcessor.hpp
src/plugin/examples/mock/: CMakeLists.txt  MockGUI.cpp  MockGUI.hpp  MockKernel.cpp  MockKernel.hpp  MockPlugin.cpp  MockPlugin.hpp
src/plugin/handler/: KernelHandler.hpp
src/ui/: OBCPlatformApplication.hpp
src/ui/widgets/: OBCWidgetApplication.cpp  OBCWidgetApplication.hpp
src/ui/widgets/editors/: w_JsonEditor.cpp  w_JsonEditor.hpp  w_RemoteEditor.cpp  w_RemoteEditor.hpp  w_RemoteEditor.ui
src/ui/widgets/interface/: ConfigureBaseWidget.hpp  ControlBaseWidget.hpp
src/ui/widgets/widgets/: FrameDisplayWidget.cpp  FrameDisplayWidget.hpp  NormalDisplayWidget.cpp  NormalDisplayWidget.hpp  NormalDisplayWidget.ui
src/ui/widgets/windows/: w_MainWindow.cpp  w_MainWindow.hpp  w_MainWindow.ui
